--- a/src/assets/style.ejs
+++ b/src/assets/style.ejs
@@ -1,5 +1,4 @@
-@charset "UTF-8";
-
+<style>
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
 * {
@@ -186,8 +185,6 @@ Footer > p {
         margin-bottom: 15px;
     }
 }
-
-
-
+</style>
 
 
