removed public directory

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como funciona os drops da Twitch</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
-    <%- include("../public/assets/style.ejs") %>
+    <%- include('../assets/style.ejs') %>
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <div>
-            <img class="img-header" src="../assets/paladins icon.png" alt="Logo">
+            <img class="img-header" src="../paladins icon.png" alt="Logo">
             <p>PALADINS <strong>BLOG</strong></p>
         </div>
         <nav>
@@ -29,8 +29,8 @@
     <Main>
         <section class="noticia">
             <picture>
-                <source media="(max-width: 400px)" srcset="../assets/yingcarnival-pq.jpg" type="image/jpg">
-                <source media="(max-width: 720px)" srcset="../assets/yingcarnival.jpg" type="image/jpg">
+                <source media="(max-width: 400px)" srcset="../yingcarnival-pq.jpg" type="image/jpg">
+                <source media="(max-width: 720px)" srcset="../yingcarnival.jpg" type="image/jpg">
                 <img src="https://i.ytimg.com/vi/tJKu_PWhczk/maxresdefault.jpg" alt="Ying Carnval">
             </picture>
             <div>
@@ -53,9 +53,9 @@
 
             <h1>&#x1F517; Como vincular sua conta com a Twitch</h1>
             <p>Para vincular, você precisa de uma conta Prime Gaming <strong>(Caso queira a skin fornecida pela Prime Gaming)</strong>. Em seguida, entre nesse site <a rel="external" target="_blank" href="https://gaming.amazon.com/loot/paladins">https://gaming<br/>.amazon.com/loot/paladins</a> e você irá se deparar com isto:</p>
-            <img src="../assets/prime paladins.PNG" alt="Prime Paladins">
+            <img src="../prime paladins.PNG" alt="Prime Paladins">
             <p>Clique na foto do personagem que está disponível, clique em resgatar e aparecerá uma opção para vincular as contas. Abra o site da Hirez Studios, coloque seu login e navegue até a Aba <strong>Linked Accounts no ícone da Twitch</strong>. Role a página para baixo e clique em <strong>Link Account</strong>, então vincule as contas.</p>
-            <img src="../assets/linked accouts.PNG" alt="Linked Accounts">
+            <img src="../linked accouts.PNG" alt="Linked Accounts">
             <p>E, TamDan! Conta vinculada com <strong>sucesso</strong>!</p>
 
             <h1>&#x23F0; Quanto tempo para conseguir uma Skin</h1>
