--- a/src/views/pages/post.ejs
+++ b/src/views/pages/post.ejs
@@ -6,31 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como funciona os drops da Twitch</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <%- include('../assets/style.ejs') %>
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <%- include('../../assets/style.ejs') %>
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <div>
-            <img class="img-header" src="../paladins icon.png" alt="Logo">
-            <p>PALADINS <strong>BLOG</strong></p>
-        </div>
-        <nav>
-            <a href="#">HOME</a>
-            <a href="#">NOTICIAS</a>
-            <a href="#">INSTAGRAM</a>
-            <a href="#">PALADINS</a>
-            <a href="#"><i class="fas fa-search fa-lg"></i></a>
-        </nav>
-        <nav class="hamburgerMenu">
-            <i class="fas fa-bars"></i>
-        </nav>
-    </header>
+    <%- include('../components/Header/index.ejs') %>
     <Main>
         <section class="noticia">
             <picture>
-                <source media="(max-width: 400px)" srcset="../yingcarnival-pq.jpg" type="image/jpg">
-                <source media="(max-width: 720px)" srcset="../yingcarnival.jpg" type="image/jpg">
+                <source media="(max-width: 400px)" srcset="../../yingcarnival-pq.jpg" type="image/jpg">
+                <source media="(max-width: 720px)" srcset="../../yingcarnival.jpg" type="image/jpg">
                 <img src="https://i.ytimg.com/vi/tJKu_PWhczk/maxresdefault.jpg" alt="Ying Carnval">
             </picture>
             <div>
@@ -53,9 +38,9 @@
 
             <h1>&#x1F517; Como vincular sua conta com a Twitch</h1>
             <p>Para vincular, você precisa de uma conta Prime Gaming <strong>(Caso queira a skin fornecida pela Prime Gaming)</strong>. Em seguida, entre nesse site <a rel="external" target="_blank" href="https://gaming.amazon.com/loot/paladins">https://gaming<br/>.amazon.com/loot/paladins</a> e você irá se deparar com isto:</p>
-            <img src="../prime paladins.PNG" alt="Prime Paladins">
+            <img src="../../prime paladins.PNG" alt="Prime Paladins">
             <p>Clique na foto do personagem que está disponível, clique em resgatar e aparecerá uma opção para vincular as contas. Abra o site da Hirez Studios, coloque seu login e navegue até a Aba <strong>Linked Accounts no ícone da Twitch</strong>. Role a página para baixo e clique em <strong>Link Account</strong>, então vincule as contas.</p>
-            <img src="../linked accouts.PNG" alt="Linked Accounts">
+            <img src="../../linked accouts.PNG" alt="Linked Accounts">
             <p>E, TamDan! Conta vinculada com <strong>sucesso</strong>!</p>
 
             <h1>&#x23F0; Quanto tempo para conseguir uma Skin</h1>
