added header in index.ejs

--- a/src/styles/globalCSS.ejs
+++ b/src/styles/globalCSS.ejs
@@ -2,7 +2,18 @@
     @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
     * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
         font-family: "Noto Sans", sans-serif;
         color: #072C33;
     }
+
+    :root {
+        --BLUE-PRIMARY: #19a1bd;
+        --BLUE-SECONDARY: #007187;
+        --BLUE-TERTIARY: #072c33;
+        --GRAY-PRIMARY: #677375;
+    }
+    
 </style>
