--- a/src/views/components/Header/index.ejs
+++ b/src/views/components/Header/index.ejs
@@ -1,14 +1,15 @@
 <%- include("styles.ejs") %>
 <header>
     <div>
+        <a href="/">
         <img class="img-header" src="../../paladins icon.png" alt="Logo">
-        <p>PALADINS <strong>BLOG</strong></p>
+            <p>PALADINS <strong>BLOG</strong></p>
+        </a>
     </div>
     <nav>
-        <a href="#">HOME</a>
-        <a href="#">NOTICIAS</a>
-        <a href="#">INSTAGRAM</a>
-        <a href="#">PALADINS</a>
+        <a href="/">INÍCIO</a>
+        <a href="https://www.instagram.com/">INSTAGRAM</a>
+        <a href="https://www.paladins.com/">PALADINS</a>
         <a href="#"><i class="fas fa-search fa-lg"></i></a>
     </nav>
     <nav class="hamburgerMenu">
