--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -13,14 +13,20 @@ header > div {
     align-items: center;
 }
 
-header p {
+header > div > a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+header > div > a > p  {
     padding-left: 15px;
     font-size: 1.3em;
     line-height: 1.7em;
 }
 
-header > div > p > strong {
-    background-color: #19A1BD;
+header > div > a > p > strong {
+    background-color: var(--BLUE-PRIMARY);
     color: white;
     padding: 5px;
     border-radius: 10px;
@@ -41,12 +47,12 @@ nav > a {
 }
 
 nav > a:hover {
-    text-decoration-color: #072C33;
+    text-decoration-color: var(--BLUE-TERTIARY);
     text-decoration: underline;
 }
 
 nav > a > i:hover {
-    color: #19A1BD;
+    color: var(--BLUE-PRIMARY);
 }
 
 @media screen and (max-width: 782px) {
