footer and header are in index.ejs

--- a/src/views/components/Header/index.ejs
+++ b/src/views/components/Header/index.ejs
@@ -8,8 +8,8 @@
     </div>
     <nav>
         <a href="/">INÍCIO</a>
-        <a href="https://www.instagram.com/">INSTAGRAM</a>
-        <a href="https://www.paladins.com/">PALADINS</a>
+        <a href="https://www.instagram.com/" target="_blank" rel="external" >INSTAGRAM</a>
+        <a href="https://www.paladins.com/" target="_blank" rel="external" >PALADINS</a>
         <a href="#"><i class="fas fa-search fa-lg"></i></a>
     </nav>
     <nav class="hamburgerMenu">
