--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -10,5 +10,13 @@
 </head>
 <body>
     <%- include('../components/Header/index.ejs') %>
+
+    <main>
+        <section>
+            
+        </section>
+    </main>
+
+    <%- include('../components/Footer/index.ejs') %>
 </body>
 </html>
