--- a/src/styles/globalCSS.ejs
+++ b/src/styles/globalCSS.ejs
@@ -1,6 +1,6 @@
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+    
     * {
         margin: 0;
         padding: 0;
