--- a/src/views/components/Footer/styles.ejs
+++ b/src/views/components/Footer/styles.ejs
@@ -1,6 +1,7 @@
 <style>
 
 Footer {
+    margin-top: auto;
     text-align: center;
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.295);
     padding: 20px;
