--- a/src/styles/globalCSS.ejs
+++ b/src/styles/globalCSS.ejs
@@ -7,6 +7,8 @@
         --BLUE-SECONDARY: #007187;
         --BLUE-TERTIARY: #072c33;
         --GRAY-PRIMARY: #677375;
+        --SHADOW-PRIMARY: 2px 2px 8px rgba(0, 0, 0, 0.43);
+        --SHADOW-SLIDER-HOVER: rgba(0, 0, 0, 0.377);
     }
 
     body {
