--- a/src/views/pages/Index/styles.ejs
+++ b/src/views/pages/Index/styles.ejs
@@ -55,14 +55,16 @@
         transition: .5s ease-in-out;
     }
 
-    .imgsSlider > img {
+    .imgsSlider > li {
+        list-style: none;
+    }
+
+    .imgsSlider > li > img {
         width: 100%;
         object-fit: cover;
     }
 
-    .imgsSlider > img:nth-of-type(1) {
+    .imgsSlider > li > img:nth-of-type(1) {
         flex-shrink: 0;
     }
-
-    
 </style>
