--- a/src/views/pages/Index/index.ejs
+++ b/src/views/pages/Index/index.ejs
@@ -17,12 +17,12 @@
             <ul class="imgsSlider">
                 <li>
                     <img src="https://pbs.twimg.com/media/EHPxN2gW4AANtDS.jpg" alt="placeholder2">
-<!--                     <h2>O baú de Halloween está de volta na loja!</h2>
- -->                </li> 
+                    <h2>O baú de Halloween está de volta na loja!</h2>
+                </li> 
                 <li>
                     <img src="https://i.pinimg.com/originals/ad/7f/51/ad7f511599c7c3bde1e19cc38f240fed.jpg" alt="placeholder1">
-<!--                     <h2>Conheça a nova skin do Jenos no passe de batalha!</h2>
- -->                </li>
+                    <h2>Conheça a nova skin do Jenos no passe de batalha!</h2>
+                </li>
             </ul>
             <button><i class="fas fa-angle-left"></i></button>
             <button><i class="fas fa-angle-right"></i></button>
