--- a/src/views/pages/Index/styles.ejs
+++ b/src/views/pages/Index/styles.ejs
@@ -13,7 +13,7 @@
 
     .imgsSlider {
         display: flex;
-        transform: translateX(0);
+        transform: translateX(-800px);
         transition: .5s ease-in-out;
     }
 
@@ -22,6 +22,9 @@
         list-style: none;
         flex-shrink: 0;
         position: relative;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
     }
 
     .imgsSlider > li > img {
@@ -33,8 +36,11 @@
     .imgsSlider > li > h2 {
         color: white;
         text-shadow: var(--SHADOW-PRIMARY);
+        text-align: center;
+        align-self: center;
+        font-size: 1.8em;
         position: absolute;
-        top: 0;
+        bottom: 25px;
     }
 
     .slider > button {
