--- a/src/views/pages/Index/index.ejs
+++ b/src/views/pages/Index/index.ejs
@@ -23,12 +23,17 @@
                     <img src="https://i.pinimg.com/originals/ad/7f/51/ad7f511599c7c3bde1e19cc38f240fed.jpg" alt="placeholder1">
                     <h2>Conheça a nova skin do Jenos no passe de batalha!</h2>
                 </li>
+                <li>
+                    <img src="https://i.pinimg.com/736x/33/61/2b/33612b8beb7cd9b1fa72e35655968e2a.jpg" alt="placeholder3">
+                    <h2>Chegou o novo passe de batalha Battle Byte!</h2>
+                </li>
             </ul>
             <button><i class="fas fa-angle-left"></i></button>
             <button><i class="fas fa-angle-right"></i></button>
         </section>
     </main>
 
+    <%- include('./script.ejs') %>
     <!-- <%- include('../../components/Footer/index.ejs') %> -->
 </body>
 </html>
