--- a/src/views/pages/Index/styles.ejs
+++ b/src/views/pages/Index/styles.ejs
@@ -9,38 +9,47 @@
         position: relative;
         display: flex;
         align-items: center;
+        box-shadow: var(--SHADOW-PRIMARY);
     }
 
     .imgsSlider {
         display: flex;
-        transform: translateX(-800px);
+        transform: translateX(0);
         transition: .5s ease-in-out;
     }
 
     .imgsSlider > li {
-        width: 100%;
-        list-style: none;
-        flex-shrink: 0;
-        position: relative;
-        height: 400px;
         display: flex;
         flex-direction: column;
+        flex-shrink: 0;
+        width: 100%;
+        height: 400px;
+        list-style: none;
+        position: relative;
+    }
+
+    .imgsSlider > li:hover > img {
+        transform: scale(1.1);
     }
 
     .imgsSlider > li > img {
         width: 100%;
-        object-fit: cover;
         height: 400px;
+        object-fit: cover;
+        cursor: pointer;
+        transition: .3s;
     }
 
     .imgsSlider > li > h2 {
         color: white;
         text-shadow: var(--SHADOW-PRIMARY);
         text-align: center;
+        font-size: 2em;
         align-self: center;
-        font-size: 1.8em;
+        max-width: 600px;
         position: absolute;
         bottom: 25px;
+        pointer-events: none;
     }
 
     .slider > button {
