--- a/src/views/pages/Index/styles.ejs
+++ b/src/views/pages/Index/styles.ejs
@@ -42,7 +42,7 @@
 
     .imgsSlider > li > h2 {
         color: white;
-        text-shadow: var(--SHADOW-PRIMARY);
+        text-shadow: 2px 1px 3px rgb(0 ,0 ,0  ,0.70);
         text-align: center;
         font-size: 2em;
         align-self: center;
