--- a/src/views/pages/Index/styles.ejs
+++ b/src/views/pages/Index/styles.ejs
@@ -1,11 +1,24 @@
 <style>
 
+    main {
+        margin: 0 40px;
+    }
+
+    .emphasis {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .emphasis > h1 {
+        font-size: 2.8em;
+    }
+
     .slider {
         overflow: hidden;
         max-width: 800px;
         height: 400px;
         border-radius: 15px;
-        margin-left: 40px;
         position: relative;
         display: flex;
         align-items: center;
