--- a/src/styles/globalCSS.ejs
+++ b/src/styles/globalCSS.ejs
@@ -9,6 +9,7 @@
         --GRAY-PRIMARY: #677375;
         --SHADOW-PRIMARY: 2px 2px 8px rgba(0, 0, 0, 0.43);
         --SHADOW-SLIDER-HOVER: rgba(0, 0, 0, 0.377);
+        --TEXT-SHADOW-PRIMARY: 2px 1px 3px rgb(0 ,0 ,0  ,0.70);
     }
 
     body {
