--- a/src/views/pages/Index/index.ejs
+++ b/src/views/pages/Index/index.ejs
@@ -34,6 +34,13 @@
             </section>
             <h1>Confira os principais posts desta semana!</h1>
         </section>
+        <ul class="postList">
+            <li>
+                <h3>O baú de Halloween está de volta!</h3>
+                <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
+                <p>Por Luís Passos</p>
+            </li>
+        </ul>
     </main>
 
     <%- include('./script.ejs') %>
