--- a/src/views/pages/Index/styles.ejs
+++ b/src/views/pages/Index/styles.ejs
@@ -7,11 +7,11 @@
     .emphasis {
         display: flex;
         align-items: center;
-        gap: 20px;
+        gap: 25px;
     }
 
     .emphasis > h1 {
-        font-size: 2.8em;
+        font-size: 2.6em;
     }
 
     .slider {
@@ -55,7 +55,7 @@
 
     .imgsSlider > li > h2 {
         color: white;
-        text-shadow: 2px 1px 3px rgb(0 ,0 ,0  ,0.70);
+        text-shadow: var(--TEXT-SHADOW-PRIMARY);
         text-align: center;
         font-size: 2em;
         align-self: center;
@@ -101,6 +101,23 @@
 
     .slider > button:nth-of-type(2):hover {
         background: linear-gradient(to right, transparent, var(--SHADOW-SLIDER-HOVER));
+    }
+
+    .postList {
+        list-style: none;
+    }
+
+    .postList > li {
+        width: 310px;
+        height: 380px;
+        border-radius: 15px;
+        background: url(https://pbs.twimg.com/media/Elq1og6XIAMg7vA.jpg) top right;
+    }
+
+    .postList > li > *,
+    .postList > li > p > *{
+        color: white;
+        text-shadow: var(--TEXT-SHADOW-PRIMARY);
     }
 
 </style>
