--- a/src/views/pages/Index/index.ejs
+++ b/src/views/pages/Index/index.ejs
@@ -40,6 +40,16 @@
                 <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
                 <p>Por Luís Passos</p>
             </li>
+            <li>
+                <h3>O baú de Halloween está de volta!</h3>
+                <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
+                <p>Por Luís Passos</p>
+            </li>
+            <li>
+                <h3>O baú de Halloween está de volta!</h3>
+                <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
+                <p>Por Luís Passos</p>
+            </li>
         </ul>
     </main>
 
