card with animation, using the tag figure

--- a/src/views/pages/Index/index.ejs
+++ b/src/views/pages/Index/index.ejs
@@ -36,20 +36,11 @@
         </section>
         <ul class="postList">
             <li>
-                <h3>O baú de Halloween está de volta!</h3>
-                <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
-                <p>Por Luís Passos</p>
+                <figure>
+                    
+                </figure>
             </li>
-            <li>
-                <h3>O baú de Halloween está de volta!</h3>
-                <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
-                <p>Por Luís Passos</p>
-            </li>
-            <li>
-                <h3>O baú de Halloween está de volta!</h3>
-                <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
-                <p>Por Luís Passos</p>
-            </li>
+           
         </ul>
     </main>
 
