--- a/src/views/pages/Index/index.ejs
+++ b/src/views/pages/Index/index.ejs
@@ -36,11 +36,45 @@
         </section>
         <ul class="postList">
             <li>
+                <section class="postInfo">
+                    <h3>O baú de Halloween está de volta!</h3>
+                    <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
+                    <p>Por Luís Passos</p>
+                </section>
                 <figure>
                     
                 </figure>
             </li>
-           
+            <li>
+                <section class="postInfo">
+                    <h3>Chegou o novo passe de batalha Battle Byte!</h3>
+                    <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
+                    <p>Por Luís Passos</p>
+                </section>
+                <figure>
+                    
+                </figure>
+            </li>
+            <li>
+                <section class="postInfo">
+                    <h3>O baú de Halloween está de volta!</h3>
+                    <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
+                    <p>Por Luís Passos</p>
+                </section>
+                <figure>
+                    
+                </figure>
+            </li>
+            <li>
+                <section class="postInfo">
+                    <h3>Conheça a nova skin do Jenos no passe de batalha!</h3>
+                    <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
+                    <p>Por Luís Passos</p>
+                </section>
+                <figure>
+                    
+                </figure>
+            </li>
         </ul>
     </main>
 
