--- a/src/views/pages/Index/styles.ejs
+++ b/src/views/pages/Index/styles.ejs
@@ -77,7 +77,7 @@
     }
 
     .slider > button:hover {
-        font-size: 4.5em;
+        transform: scale(1.2);
     }
 
     .slider > button > i {
@@ -115,14 +115,14 @@
     .postList > li {
         width: 310px;
         height: 380px;
+        border-radius: 20px;
+        box-shadow: var(--SHADOW-PRIMARY);
         display: flex;
         flex-direction: column;
         justify-content: end;
-        gap: 3px;
-        box-shadow: var(--SHADOW-PRIMARY);
         cursor: pointer;
-        border-radius: 20px;
         overflow: hidden;
+        position: relative;
     }
 
     .postList > li > figure {
@@ -137,16 +137,24 @@
         transform: scale(1.1);
     }
 
-    .postList > li > h3 {
-        font-size: 1.6em;
+    .postInfo {
+        position: absolute;
+        z-index: 2;
+        gap: 5px;
+        padding: 20px;
     }
 
-    .postList > li > p:nth-of-type(1) {
+    .postInfo > h3 {
+        font-size: 1.7em;
+        padding-bottom: 6px;
+    }
+
+    .postInfo > p:nth-of-type(1) {
         word-spacing: 2px;
     }
 
-    .postList > li > *,
-    .postList > li > p > *{
+    .postInfo > *,
+    .postInfo > p > *{
         color: white;
         text-shadow: var(--TEXT-SHADOW-PRIMARY);
     }
