slider almost responsive

--- a/src/views/pages/Index/index.ejs
+++ b/src/views/pages/Index/index.ejs
@@ -41,12 +41,44 @@
                     <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
                     <p>Por Luís Passos</p>
                 </section>
-                <img src="https://pbs.twimg.com/media/Elq1og6XIAMg7vA.jpg" alt="Bomb King Halloween">
+                <figure>
+                    
+                </figure>
+            </li>
+            <li>
+                <section class="postInfo">
+                    <h3>Chegou o novo passe de batalha Battle Byte!</h3>
+                    <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
+                    <p>Por Luís Passos</p>
+                </section>
+                <figure>
+                    
+                </figure>
+            </li>
+            <li>
+                <section class="postInfo">
+                    <h3>O baú de Halloween está de volta!</h3>
+                    <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
+                    <p>Por Luís Passos</p>
+                </section>
+                <figure>
+                    
+                </figure>
+            </li>
+            <li>
+                <section class="postInfo">
+                    <h3>Conheça a nova skin do Jenos no passe de batalha!</h3>
+                    <p><strong>LEITURA</strong> 4 MIN <i class="far fa-clock"></i></p>
+                    <p>Por Luís Passos</p>
+                </section>
+                <figure>
+                    
+                </figure>
             </li>
         </ul>
     </main>
 
+    <%- include('../../components/Footer/index.ejs') %>
     <%- include('./script.ejs') %>
-    <!-- <%- include('../../components/Footer/index.ejs') %> -->
 </body>
 </html>
