--- a/src/views/pages/Index/styles.ejs
+++ b/src/views/pages/Index/styles.ejs
@@ -58,7 +58,7 @@
     .imgsSlider>li>h2 {
         text-shadow: var(--TEXT-SHADOW-PRIMARY);
         text-align: center;
-        font-size: clamp(1.8em, );
+        font-size: 2em;
         color: white;
         max-width: 600px;
         margin: 0 20px;
