full index page design

--- a/src/views/components/Footer/styles.ejs
+++ b/src/views/components/Footer/styles.ejs
@@ -9,6 +9,17 @@ Footer {
 
 Footer > nav {
     font-weight: bold;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+Footer > nav > a {
+    text-decoration: none;
+}
+
+Footer > nav > a:hover {
+    text-decoration: underline var(--BLUE-TERTIARY);
 }
 
 Footer > p {
