--- a/src/views/pages/Index/styles.ejs
+++ b/src/views/pages/Index/styles.ejs
@@ -163,7 +163,7 @@
         text-shadow: var(--TEXT-SHADOW-PRIMARY);
     }
 
-    @media (max-width: 780px) {
+    @media (max-width: 900px) {
 
         .emphasis {
             flex-direction: column;
@@ -174,6 +174,7 @@
         }
 
         .slider {
+            max-width: 900px;
             margin: 0 -40px;
             border-radius: 0;
         }
