author-main is aligned in the middle

--- a/src/views/components/Header/index.ejs
+++ b/src/views/components/Header/index.ejs
@@ -12,7 +12,7 @@
         <a href="https://www.paladins.com/" target="_blank" rel="external" >PALADINS</a>
         <a href="#"><i class="fas fa-search fa-lg"></i></a>
     </nav>
-    <nav class="hamburgerMenu">
+    <nav title="Menu" class="hamburgerMenu">
         <i class="fas fa-bars"></i>
     </nav>
 </header>
