--- a/src/views/pages/Post/index.ejs
+++ b/src/views/pages/Post/index.ejs
@@ -14,11 +14,7 @@
     <%- include('../../components/Header/index.ejs') %>
     <Main>
         <section class="noticia">
-            <picture>
-                <source media="(max-width: 400px)" srcset="../../yingcarnival-pq.jpg" type="image/jpg">
-                <source media="(max-width: 720px)" srcset="../../yingcarnival.jpg" type="image/jpg">
                 <img src="https://i.ytimg.com/vi/tJKu_PWhczk/maxresdefault.jpg" alt="Ying Carnval">
-            </picture>
             <div>
                 <p class="titulo-main-destaque"><i class="fas fa-star"></i> DESTAQUE</p>
                 <p class="titulo-main">Como funciona os drops da Twitch</p>
@@ -38,7 +34,7 @@
             </ul>
 
             <h1>&#x1F517; Como vincular sua conta com a Twitch</h1>
-            <p>Para vincular, você precisa de uma conta Prime Gaming <strong>(Caso queira a skin fornecida pela Prime Gaming)</strong>. Em seguida, entre nesse site <a rel="external" target="_blank" href="https://gaming.amazon.com/loot/paladins">https://gaming<br/>.amazon.com/loot/paladins</a> e você irá se deparar com isto:</p>
+            <p>Para vincular, você precisa de uma conta Prime Gaming <strong>(Caso queira a skin fornecida pela Prime Gaming)</strong>. Em seguida, entre nesse site <a rel="external" target="_blank" href="https://gaming.amazon.com/loot/paladins">https://gaming.amazon.com/loot/paladins</a> e você irá se deparar com isto:</p>
             <img src="../../prime paladins.PNG" alt="Prime Paladins">
             <p>Clique na foto do personagem que está disponível, clique em resgatar e aparecerá uma opção para vincular as contas. Abra o site da Hirez Studios, coloque seu login e navegue até a Aba <strong>Linked Accounts no ícone da Twitch</strong>. Role a página para baixo e clique em <strong>Link Account</strong>, então vincule as contas.</p>
             <img src="../../linked accouts.PNG" alt="Linked Accounts">
