--- a/src/views/pages/Post/styles.ejs
+++ b/src/views/pages/Post/styles.ejs
@@ -1,19 +1,13 @@
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
-
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: "Noto Sans";
-}
 
 Main > .noticia {
     align-items: center;
     display: flex;
 }
 
-Main > .noticia > picture > img {
+Main > .noticia  > img {
     max-width: 700px;
+    height: 393px;
     width: 100%;
     border-radius: 0px 10px 10px 0px;
 }
@@ -46,6 +40,8 @@ Main > .noticia > div {
 
 .autor-main {
     padding-top: 15px;
+    display: flex;
+    align-items: center;
 }
 
 .autor-main > i {
