test with align center at read time

--- a/src/views/pages/Post/index.ejs
+++ b/src/views/pages/Post/index.ejs
@@ -18,7 +18,7 @@
             <div>
                 <p class="titulo-main-destaque"><i class="fas fa-star"></i> DESTAQUE</p>
                 <p class="titulo-main">Como funciona os drops da Twitch</p>
-                <p class="autor-main">por <strong>Luís Passos</strong> há 2 meses <i class="far fa-clock"></i> <span class="main-tempo-leitura">4 MIN DE LEITURA</span></p>
+                <p class="autor-main">por <strong> Luís Passos</strong> há 2 meses<span id="test"> <i class="far fa-clock"></i> <span class="main-tempo-leitura">4 MIN DE LEITURA</span></span></p>
             </div>
         </section>
         <section class="conteudo">
