--- a/src/views/pages/Post/styles.ejs
+++ b/src/views/pages/Post/styles.ejs
@@ -1,5 +1,10 @@
 <style>
 
+#test {
+    display: inline-flex;
+    align-items: center;
+}
+
 Main > .noticia {
     align-items: center;
     display: flex;
