--- a/src/views/pages/Post/index.ejs
+++ b/src/views/pages/Post/index.ejs
@@ -18,11 +18,10 @@
             <div>
                 <p class="titulo-main-destaque"><i class="fas fa-star"></i> DESTAQUE</p>
                 <p class="titulo-main">Como funciona os drops da Twitch</p>
-                <p class="autor-main">por <strong> Luís Passos</strong> há 2 meses<span id="test"> <i class="far fa-clock"></i> <span class="main-tempo-leitura">4 MIN DE LEITURA</span></span></p>
+                <p class="autor-main"><span>por <strong>Luís Passos</strong> há 2 meses </span><time><i class="far fa-clock"></i> <span class="main-tempo-leitura">4 MIN DE LEITURA</span></time></p>
             </div>
         </section>
         <section class="conteudo">
-
             <h1>&#x1F44B; Introdução</h1>
             <p>Já pensou em resgatar skins toda semana <strong>totalmente de graça</strong>, apenas assistindo suas lives favoritas? Nesse post iremos esclarecer todas as suas dúvidas sobre esse sistema que chegou ao Reino.</p>
             <p>Alguns pontos que vamos abordar:</p>
