--- a/src/views/pages/Post/index.ejs
+++ b/src/views/pages/Post/index.ejs
@@ -14,8 +14,10 @@
     <%- include('../../components/Header/index.ejs') %>
     <Main>
         <section class="noticia">
+            <figure>
                 <img src="https://i.ytimg.com/vi/tJKu_PWhczk/maxresdefault.jpg" alt="Ying Carnval">
-            <div>
+            </figure>
+            <div class="postTitle">
                 <p class="titulo-main-destaque"><i class="fas fa-star"></i> DESTAQUE</p>
                 <p class="titulo-main">Como funciona os drops da Twitch</p>
                 <p class="autor-main"><span>por <strong>Luís Passos</strong> há 2 meses </span><time><i class="far fa-clock"></i> <span class="main-tempo-leitura">4 MIN DE LEITURA</span></time></p>
