fully responsive post image with your text

--- a/src/views/components/Footer/styles.ejs
+++ b/src/views/components/Footer/styles.ejs
@@ -16,6 +16,7 @@ Footer > nav {
 
 Footer > nav > a {
     text-decoration: none;
+    color: var(--BLUE-TERTIARY);
 }
 
 Footer > nav > a:hover {
@@ -25,6 +26,7 @@ Footer > nav > a:hover {
 Footer > p {
     padding: 15px;
     font-size: .8em;
+    color: var(--BLUE-TERTIARY);
 }
 
 </style>
