--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -23,6 +23,7 @@ header > div > a > p  {
     padding-left: 15px;
     font-size: 1.3em;
     line-height: 1.7em;
+    color: var(--BLUE-TERTIARY);
 }
 
 header > div > a > p > strong {
@@ -44,6 +45,7 @@ header > div > a > p > strong {
 header > nav > a {
     text-decoration-line: none;
     padding-left: 15px;
+    color: var(--BLUE-TERTIARY);
 }
 
 header > nav > a:hover {
@@ -65,6 +67,7 @@ header > nav > a > i:hover {
         display: block;
         font-size: 2.7em;
         cursor: pointer;
+        color: var(--BLUE-TERTIARY);
     }
 }
 
