--- a/src/views/pages/Post/styles.ejs
+++ b/src/views/pages/Post/styles.ejs
@@ -1,5 +1,9 @@
 <style>
 
+main {
+    color: var(--BLUE-TERTIARY);
+}
+
 .noticia {
     align-items: center;
     display: flex;
@@ -58,7 +62,7 @@
 }
 
 .main-tempo-leitura {
-    font-size: .8em
+    font-size: .9em
 }
 
 .conteudo {
@@ -86,6 +90,8 @@
 .conteudo a {
     text-decoration: none;
     border-bottom: 3px solid #677375;
+    color: var(--BLUE-TERTIARY);
+    word-break: break-all;
 }
 
 .conteudo img {
@@ -100,12 +106,8 @@
 @media (max-width: 900px) {
     .postTitle {
         position: absolute;
-    }
-
-    .postTitle > *,
-    .postTitle > * > *,
-    .postTitle > * > * > * {
         color: white;
+        text-shadow: var(--TEXT-SHADOW-PRIMARY);
     }
 
     .noticia  > figure {
