full rotation animation in hamburger menu

--- a/src/views/components/Header/index.ejs
+++ b/src/views/components/Header/index.ejs
@@ -15,4 +15,5 @@
     <nav title="Menu" class="hamburgerMenu">
         <i class="fas fa-bars"></i>
     </nav>
+    <%- include("./script.ejs") %>
 </header>
