--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -42,6 +42,10 @@ header > div > a > p > strong {
     display: none;
 }
 
+.hamburgerMenu > i {
+    transition: .5s;
+}
+
 header > nav > a {
     text-decoration-line: none;
     padding-left: 15px;
