try with translateX and transition to menu, doesn't work

--- a/src/styles/globalCSS.ejs
+++ b/src/styles/globalCSS.ejs
@@ -7,6 +7,7 @@
         --BLUE-SECONDARY: #007187;
         --BLUE-TERTIARY: #072c33;
         --GRAY-PRIMARY: #677375;
+        --GRAY-SECONDARY:rgb(200, 210, 212);
         --SHADOW-PRIMARY: 2px 2px 8px rgba(0, 0, 0, 0.43);
         --SHADOW-SLIDER-HOVER: rgba(0, 0, 0, 0.377);
         --TEXT-SHADOW-PRIMARY: 2px 1px 3px rgb(0 ,0 ,0  ,0.70);
