--- a/src/views/components/Header/index.ejs
+++ b/src/views/components/Header/index.ejs
@@ -15,5 +15,13 @@
     <nav title="Menu" class="hamburgerMenu">
         <i class="fas fa-bars"></i>
     </nav>
+    <aside class="menu">
+        <nav>
+            <p><a href="/">INÍCIO</a></p>
+            <p><a href="https://instagram.com/">INSTAGRAM</a></p>
+            <p><a href="https://www.paladins.com/">PALADINS</a></p>
+            <p>PESQUISAR</p>
+        </nav>
+    </aside>
     <%- include("./script.ejs") %>
 </header>
