--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -61,6 +61,44 @@ header > nav > a > i:hover {
     color: var(--BLUE-PRIMARY);
 }
 
+.menu {
+    position: fixed;
+    background: rgba(0, 0, 0, 0.5);
+    right: 0;
+    top: 0;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: flex-end;
+}
+
+.menu > nav {
+    background: white;
+    display: inline-block;
+    height: 100%;
+    padding-top: 10px;
+    box-shadow: var(--SHADOW-PRIMARY);
+    transform: translateX(100%);
+    transition: all 1s ease-in;
+}
+
+.menu p {
+    font-size: 1.5em;
+    cursor: pointer;
+    padding: 5px 21px;
+}
+
+.menu p:hover {
+    background: var(--GRAY-SECONDARY);
+}
+
+.menu a,
+.menu {
+    color: var(--BLUE-SECONDARY);
+    text-decoration: none;
+}
+
 @media screen and (max-width: 782px) {
     
     header > nav {
