full menu animation

--- a/src/views/components/Header/script.ejs
+++ b/src/views/components/Header/script.ejs
@@ -5,8 +5,9 @@
 
     hamburgerMenu.addEventListener("click", ()=> {
         hamburgerMenu.style.transform = "rotate(-90deg)"
-        menu.style.display = "flex";
-        menuNavigation.style.transform = "translateX(0%)"
+        menu.style.opacity = 1;
+        menu.style.zIndex = 2;
+        menuNavigation.style.transform = "translateX(0)"
     })
 
 </script>
