--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -66,11 +66,12 @@ header > nav > a > i:hover {
     background: rgba(0, 0, 0, 0.5);
     right: 0;
     top: 0;
-    z-index: 2;
+    z-index: -1;
     width: 100%;
     height: 100%;
-    display: none;
+    display: flex;
     justify-content: flex-end;
+    opacity: 0;
 }
 
 .menu > nav {
@@ -80,7 +81,7 @@ header > nav > a > i:hover {
     padding-top: 10px;
     box-shadow: var(--SHADOW-PRIMARY);
     transform: translateX(100%);
-    transition: all 1s ease-in;
+    transition: .5s;
 }
 
 .menu p {
