--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -100,6 +100,11 @@ header > nav > a > i:hover {
     text-decoration: none;
 }
 
+.menu > nav > svg {
+    margin: 8px 21px;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 782px) {
     
     header > nav {
