full svg style, but still missing padding

--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -100,8 +100,9 @@ header > nav > a > i:hover {
     text-decoration: none;
 }
 
-.menu > nav > svg {
-    margin: 8px 21px;
+.menu > nav > img {
+    width: 16px;
+    margin: 7px 21px;
     cursor: pointer;
 }
 
